create task with tags (existed & new one)